--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "prettier": "^3.0.3"
   },
   "dependencies": {
+    "cookies-parser": "^1.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^8.0.0"
